<resources>
    <string name="app_name">Tech Prep</string>
    <string name="Record_Video">Record Video</string>
    <string name="Home">Home</string>
    <string name="Flashcards">Flashcards</string>
    <string name="Get_Question">Get Question</string>
    <string name="new_Question">Get New Question</string>
    <string name="Get_Answer">Show Answer</string>
    <string name="hide_Answer">Hide Answer</string>
    <string name="hidden_Answer">Answer Hidden</string>
    <string name="Resources">Resources</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="serverURL">http://ukko.d.umn.edu:48821</string>
    <string name="admin_options">Administrator Options</string>
    <string name="admin_menu">Admin</string>
    <string name="nav_admin">Admin</string>
    <string name="title_activity_admin_menu2">AdminMenu2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addQuestion">Add a question below:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="addButton">Add Question</string>
    <string name="ViewQuestion"> View Question</string>
    <string name="addAnswer">Add a Answer: </string>
    <string name="addQuestionHeader">Add Question</string>
    <string name="banksText">Banks</string>
    <string name="viewBanks">View Banks</string>
    <string name="newBank">Add New Bank</string>
    <string name="deleteBank">Delete Bank</string>
    <string name="addQuestionToBank">Add Questions To Bank</string>
    <string name="title_activity_view_bank_list">viewBankList</string>
    <string name="deleteSelected">Delete Selected</string>
    <string name="send">Send</string>
    <string name="adminVerificationButton">Click Here to Verify Admin Status</string>
    <string name="get">Get Question from the Bank</string>
    <string name="setDefault">SELECT A BANK</string>
    <string name="deleteSelectedBank">Delete Questions from Selected Bank</string>
    <string name="addDeleteButton">Delete Question</string>
    <string name="DeleteQuestion"> Delete Question</string>
    <string name="DeleteQuestionAdded"> Add Question To Be Deleted Exactly</string>
    <string name="view">View</string>
    <!--<string name="adminVerificationButton">Click to Verify Admin Status</string>-->
</resources>
